# Aegis

./: .gitignore  README.md  start_aegis.bat  start_aegis.sh
backend/controllers/: assetController.js
backend/routes/: assetRoutes.js
backend/services/: assetService.js
backend/utils/: validators.js
crawler_pipeline/: .env.example  .gitignore  DOCS.md  README.md  main.py  pyproject.toml  requirements.txt  targets.json
crawler_pipeline/quicklaunch/: run.bat  run.sh
crawler_pipeline/src/crawler_pipeline/: __init__.py  config.py  crawler.py  fetcher.py  pipeline.py  preprocessor.py  standalone.py  stock_scraper.py  utils.py
crawler_pipeline/tests/: test_utils.py
engine/: .env.example  database.py  register_assets.py  requirements.txt
engine/api/: endpoints.py
engine/core/: ai_engine.py
frontend/src/pages/: Scan.jsx
